--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "embla-carousel-react": "^8.6.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.552.0",
-    "next": "16.0.1",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "^19.2.4",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.66.0",
     "react-qr-code": "^2.0.18",
     "react-spinners": "^0.17.0",
@@ -49,7 +49,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
